--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     background: #1e1f24;
     color:#333;
-    text-align: left;
+    text-align: center;
     font-family: Arial;
     font-size: 16px;
     margin: 0;
@@ -38,7 +38,7 @@ body
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
