--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,12 +1,13 @@
+
 body
 {
     background: #1e1f24;
-    color:#333;
+    color: #333;
     text-align: center;
     font-family: Arial;
     font-size: 16px;
     margin: 0;
-    padding:0;
+    padding: 0;
 }
 
 #cabecera
@@ -17,14 +18,12 @@ body
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
-   
 }
 
-#cabecera logo
+#cabecera #logo
 {
     width: 20px;
     vertical-align: middle;
-   
 }
 
 #cabecera #tagline
@@ -32,7 +31,6 @@ body
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
-   
 }
 
 #container
@@ -48,9 +46,16 @@ body
 {
     font-size: 20px;
 }
-
 #post
 {
     background: white;
     padding: 1em;
+}
+
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
